[metadata]
name = rlgql
version = 1.0.0
url = https://gql.raidleader.io
maintainer = Raidleader.io
maintainer_email = admin@raidleader.io
description = GraphQL API for https://gql.raidleader.io.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    Flask-CORS
    Flask-SQLAlchemy
    python-dotenv
    graphene



[coverage:run]
branch = True
source =
    raidleader_gql